--- a/Seminar_5/HomeWork5/style.css
+++ b/Seminar_5/HomeWork5/style.css
@@ -35,10 +35,11 @@ p {
 }
 
 .container {
-  width: 1170px;
+  width: 1280px;
   margin: 0 auto;
   /*border: 1px solid #000;*/
 }
+
 .main_logo {
   margin-top: 40px;
   width: 137px;
@@ -133,8 +134,6 @@ article {
 }
 
 .features div {
-  width: 370px;
-  height: 291px;
   padding: 40px 0 15px 30px;
 }
 
@@ -161,6 +160,11 @@ article {
   line-height: 150%;
   color: #000000;
   margin-top: 25px;
+}
+
+.services_background {
+  background: #fafafa;
+  padding-bottom: 100px;
 }
 
 .services {
@@ -190,6 +194,66 @@ article {
 .services2 {
   margin-top: 54px;
   display: flex;
-  flex-direction: row;
+  justify-content: center;
   gap: 17px;
+}
+
+.services2 button {
+  margin-top: 39px;
+  font-family: "Gilroy-Bold";
+  font-size: 13px;
+  line-height: 150%;
+  text-align: center;
+  padding: 15px 35px;
+  background: #f25822;
+  box-shadow: 4px 4px 8px rgb(242 88 34 / 20%);
+  border-radius: 50px;
+  color: #ffffff;
+  border: none;
+  margin-bottom: 50px;
+  cursor: pointer;
+}
+
+.services2 div h3 {
+  margin-bottom: 22px;
+  margin-top: 22px;
+}
+
+.services2_item1 {
+  width: 370px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  background: #ffffff;
+}
+
+.services2_item1 img {
+  height: 270px;
+}
+
+.services2_item2 {
+  width: 370px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  box-shadow: 15px 25px 60px -5px rgba(0, 0, 0, 0.1);
+  background: #ffffff;
+}
+
+.services2_item3 {
+  width: 370px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  background: #ffffff;
+}
+
+.services2 div p {
+  text-align: center;
 }
