--- a/Seminar_7/HomeWorks7/style.css
+++ b/Seminar_7/HomeWorks7/style.css
@@ -26,7 +26,7 @@ p {
 }
 
 .container {
-  max-width: 100vw;
+  max-width: 100vmax;
   margin: 0 auto;
   /*border: 1px solid #000;*/
 }
@@ -68,7 +68,6 @@ p {
   background: #f1e4e6;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  min-width: 800px;
 }
 
 .brand_text h1 {
@@ -112,10 +111,7 @@ p {
 
 .top_content {
   display: flex;
-  justify-content: center;
-  /*display: grid;
-  grid-template-columns: 360px 360px 360px;
-  grid-template-rows: 1fr;*/
+  justify-content: center;  
   gap: 30px;
 }
 
@@ -205,7 +201,7 @@ p {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   gap: 30px;
-  width: 1140px;
+  
   margin: 0 auto;
 }
 
@@ -254,8 +250,7 @@ p {
 }
 
 .bottom_btn {
-  width: 1140px;
-  margin: 48px auto 0 auto;
+    margin: 48px auto 0 auto;
 }
 
 .bottom_btn div {
@@ -273,4 +268,85 @@ p {
 
 .bottom_btn div button p {
   color: #ff6a6a;
+}
+
+@media (max-width: 768px) {
+  .main_content {
+    width: 736px;
+  }
+
+  .header_main {
+    min-width: 736px;
+  }
+
+  .header_main div img {
+    min-width: 286px;
+  }
+  .nav_item1 {
+    padding-left: 32px;
+  }
+
+  .nav_item2 {
+    padding-right: 32px;
+  }
+
+  .brand_text {
+    padding-top: 35%;
+    min-width: 311px;
+  }
+
+  .brand_text h1 {
+    font-size: 44px;
+    line-height: 52px;
+  }
+
+  .brand_text h2 {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+  }
+
+  .top_content_item1,
+.top_content_item2,
+.top_content_item3 {
+  min-width: 232px;
+  height: 168px;
+}
+
+.top_content {
+ gap: 20px;
+}
+
+.span_color {
+  font-size: 24px;
+  line-height: 28px;
+  color: #f16d7f;
+}
+
+.top_content_item1 p
+{
+  top: 45%;
+  left: 18%;
+}
+
+.top_content_item4 p {
+  top: 35%;
+  left: 40%;
+}
+
+.bottom_content_item {
+  padding-top: 110px;
+  padding-bottom: 72px;
+  
+}
+
+.bottom_content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 16px;
+  
+  margin: 0 auto;
+}
+
 }
