--- a/Seminar_9/HomeWorks9/style.css
+++ b/Seminar_9/HomeWorks9/style.css
@@ -279,9 +279,14 @@ p {
 footer {
   width: 100vw;
 }
-.section_item1 {
+.section1 {
   background-color: #222224;
+}
+
+.section_item1 {
   /*height: 341px;*/
+  max-width: 1140px;
+  margin: 0 auto;
   display: flex;
   gap: 30px;
   justify-content: center;
@@ -289,7 +294,7 @@ footer {
 }
 
 .section_item1 article div {
-  width: 360px;
+  max-width: 360px;
   height: 134px;
   text-align: center;
   font-family: "Lato";
@@ -318,14 +323,40 @@ footer {
 
 .section2 {
   background-image: url(img/footer_photo_subscribe.png);
-  
+  background-size: 100% 100%;
 }
 
 .section_item2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 97px 0 126px 0;
-  background: rgba(244, 244, 244, 0.7);
+  max-width: 1140px;
+  margin: 0 auto;
+  /* background: rgba(244, 244, 244, 0.7);*/
+}
+
+.section_item2_left {
+  max-width: 359px;
+  height: 225px;
+  padding: 0 27px;
+  text-align: center;
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  color: #222224;
+}
+.section_item2_left img {
+  margin: 0 auto 30px auto;
+}
+
+.section_item2_right {
+  max-width: 557px;
+  height: 142px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 @media (max-width: 768px) {
