--- a/Seminar_9/HomeWorks9/style.css
+++ b/Seminar_9/HomeWorks9/style.css
@@ -111,7 +111,7 @@ p {
   background: #ffffff;
   padding-top: 65px;
   padding-bottom: 60.5px;
-  width: 1140px;
+  max-width: 1140px;
   margin: 0 auto;
 }
 
@@ -207,7 +207,7 @@ p {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   gap: 30px;
-
+  max-width: 1140px;
   margin: 0 auto;
 }
 
