--- a/Seminar_9/HomeWorks9/style.css
+++ b/Seminar_9/HomeWorks9/style.css
@@ -535,6 +535,32 @@ footer {
     top: 15px;
     right: 25px;
   }
+
+  .section_item1 {
+    max-width: 768px;
+    gap: 48px;
+    flex-direction: column;
+    align-items: center;
+    padding: 48px 0 64px 0;
+  }
+
+  .section_item2 {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding: 64px 0 219px 0;
+    max-width: 768px;
+  }
+
+  .section_item2_left {
+    justify-self: center;
+  }
+
+  .section_item3 {
+    max-width: 768px;    
+    padding: 24px 0 23px 0;    
+    justify-content: space-around;
+}
+
 }
 
 @media (max-width: 425px) {
