--- a/Seminar_9/HomeWorks9/style.css
+++ b/Seminar_9/HomeWorks9/style.css
@@ -577,6 +577,11 @@ footer {
     max-width: 425px;
   }
 
+  .brand_text {
+    padding-top: 40%;
+    width: 355px;
+}
+
   .top_content {
     flex-direction: column;
     align-items: center;
@@ -629,6 +634,11 @@ footer {
   .nav {
     height: 74px;
   }
+
+  .brand_text {
+    padding-top: 35%;
+    width: 311px;
+}
 
   .header_main {
     max-width: 375px;
