--- a/Seminar_7/HomeWorks7/style.css
+++ b/Seminar_7/HomeWorks7/style.css
@@ -26,7 +26,7 @@ p {
 }
 
 .container {
-  max-width: 100vmax;
+  /*max-width: 100vmax;*/
   margin: 0 auto;
   /*border: 1px solid #000;*/
 }
@@ -57,6 +57,11 @@ p {
   align-items: center;
   justify-content: flex-end;
   padding-right: 240px;
+  position: relative;
+}
+
+.nav_basket {
+  display: none;
 }
 
 .nav_item2 img {
@@ -111,7 +116,7 @@ p {
 
 .top_content {
   display: flex;
-  justify-content: center;  
+  justify-content: center;
   gap: 30px;
 }
 
@@ -201,7 +206,7 @@ p {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   gap: 30px;
-  
+
   margin: 0 auto;
 }
 
@@ -250,7 +255,7 @@ p {
 }
 
 .bottom_btn {
-    margin: 48px auto 0 auto;
+  margin: 48px auto 0 auto;
 }
 
 .bottom_btn div {
@@ -307,46 +312,56 @@ p {
   }
 
   .top_content_item1,
-.top_content_item2,
-.top_content_item3 {
-  min-width: 232px;
-  height: 168px;
-}
+  .top_content_item2,
+  .top_content_item3 {
+    min-width: 232px;
+    height: 168px;
+  }
 
-.top_content {
- gap: 20px;
-}
+  .top_content {
+    gap: 20px;
+  }
 
-.span_color {
-  font-size: 24px;
-  line-height: 28px;
-  color: #f16d7f;
-}
+  .span_color {
+    font-size: 24px;
+    line-height: 28px;
+    color: #f16d7f;
+  }
 
-.top_content_item1 p
-{
-  top: 45%;
-  left: 18%;
-}
+  .top_content_item1 p {
+    top: 45%;
+    left: 18%;
+  }
 
-.top_content_item4 p {
-  top: 35%;
-  left: 40%;
-}
+  .top_content_item4 p {
+    top: 35%;
+    left: 40%;
+  }
 
-.bottom_content_item {
-  padding-top: 110px;
-  padding-bottom: 72px;
-  
-}
+  .bottom_content_item {
+    padding-top: 110px;
+    padding-bottom: 72px;
+  }
 
-.bottom_content {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 16px;
-  
-  margin: 0 auto;
-}
+  .bottom_content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 16px;
 
+    margin: 0 auto;
+  }
+
+  .nav_basket {
+    display: inline;
+    position: absolute;
+    color: #ffffff;
+    background: #f16d7f;
+    padding-left: 4px;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    top: 15px;
+    right: 25px;
+  }
 }
