--- a/Seminar_9/HomeWorks9/style.css
+++ b/Seminar_9/HomeWorks9/style.css
@@ -216,14 +216,52 @@ p {
   max-width: 360px;
 }
 
-.bottom_content_item1 div,
-.bottom_content_item2 div,
-.bottom_content_item3 div,
-.bottom_content_item4 div,
-.bottom_content_item5 div,
-.bottom_content_item6 div {
+.inner_content_bottom {
   padding: 20px 30px 20px 16px;
   min-width: 250px;
+}
+
+.bottom_content div {
+  position: relative;
+}
+
+.button_basket_bottom {
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+
+.bottom_img_basket:hover div {
+  opacity: 1;
+}
+
+.button_basket_bottom button{
+  position: absolute;
+  top: 175px;
+  left: 135px;
+  cursor: pointer;
+  padding: 12px;
+}
+
+.bottom_img_basket::before {  
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(58, 56, 56, 0.86);
+  content: '';
+  opacity: 0;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.bottom_img_basket:hover::before {  
+  opacity: 1;
+}
+
+.bottom_img_basket:hover::before .button_basket_bottom {
+  opacity: 1;
 }
 
 .bottom_content_item1 div h2,
