--- a/Seminar_9/HomeWorks9/style.css
+++ b/Seminar_9/HomeWorks9/style.css
@@ -41,10 +41,48 @@ p {
   position: absolute;
   top: 75px;
   right: 0;  
-  height: 634px;
+  min-height: 634px;
   width: 232px;
   background-color: #fff;
   box-shadow: -4px 6px 19px -9px #6F6E6E;
+  padding: 32px 0 32px 33px;
+}
+
+.drop_menu p {
+font-family: 'Lato';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 17px;
+color: #000000;
+}
+
+.drop_menu ul li{
+  list-style-type: none;
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #6F6E6E;
+  margin-left: 24px;
+  margin-top: 12px;
+}
+
+.drop_menu ul li:first-child{
+  font-family: 'Lato';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 17px;
+color: #F16D7F;
+
+margin-left: 0;
+margin-top: 24px;
+}
+
+.menu_block {
+
 }
 
 .nav {
