--- a/Seminar_9/HomeWorks9/style.css
+++ b/Seminar_9/HomeWorks9/style.css
@@ -46,6 +46,7 @@ p {
   background-color: #fff;
   box-shadow: -4px 6px 19px -9px #6F6E6E;
   padding: 32px 0 32px 33px;
+  z-index: 9999;
 }
 
 .drop_menu p {
